 * Added support for HTTP PUT (HTTP upload)

Video output:
 * Added X11 RENDER video output plugin
 * Remove aa plugin
 * Remove evas plugin
 * Remove omxil_vout plugin
 * Remove RealRTSP plugin
 * Remove Real demuxer plugin
 * Fix washed out black on NVIDIA cards with Direct3D9
 * On-Screen-Display is off by default in libvlc
 * Remove deprecated Linux framebuffer plugin

Audio filter:
 * Add RNNoise recurrent neural network denoiser

Video filter:
 * Update yadif
 * Remove remote OSD plugin

Stream output:
 * New SDI output with improved audio and ancillary support.
   Candidate for deprecation of decklink vout/aout modules.
 * Support for DLNA/UPNP renderers
 * The "udp" access output module has been removed.
   Please use the UDP stream output instead, e.g.:
     Old: '#std{access=udp,mux=ts,dst=239.255.1.2:1234,sap}'
     New: '#udp{dst=239.255.1.2:1234,sap}'

Muxers:
 * MP4 files are no longer faststart by default

Service discovery:
 * Support Renderer discovery with avahi

macOS:
 * Remove Growl notification support
 * Improved AppleScript API with support for playback modes, recording, rate

appleOS:
 * Improved proxy configuration handling
Changes between 3.0.12.1 and 3.0.13:
----------------------------------

Demux:
 * Adaptive: fix artefacts in HLS streams with wrong profiles/levels
 * Fix regression on some MP4 files for the audio track
 * Fix MPGA and ADTS probing in TS files
 * Fix Flac inside AVI files
 * Fix VP9/Webm artefacts when seeking

Codec:
 * Support SSA text scaling
 * Fix rotation on Android rotation
 * Fix WebVTT subtitles that start at 00:00

Access:
 * Update libnfs to support NFSv4
 * Improve SMB2 integration
 * Fix Blu-ray files using Unicode names on Windows
 * Disable mcast lookups on Android for RTSP playback

Video Output:
 * Rework the D3D11 rendering wait, to fix choppiness on display

Interfaces:
 * Fix VLC getting stuck on close on X11 (#21875)
 * Improve RTL on preferences on macOS
 * Add mousewheel horizontal axis control