@@ -34,20 +34,11 @@ libvdpau_chroma_plugin_la_SOURCES = hw/vdpau/chroma.c hw/vdpau/picture.c
 libvdpau_chroma_plugin_la_CFLAGS = $(AM_CFLAGS) $(VDPAU_CFLAGS)
 libvdpau_chroma_plugin_la_LIBADD = libvlc_vdpau.la
 
-libvdpau_display_plugin_la_SOURCES = hw/vdpau/display.c hw/vdpau/picture.c
-libvdpau_display_plugin_la_CPPFLAGS = $(AM_CPPFLAGS) -I$(srcdir)/video_output/xcb
-libvdpau_display_plugin_la_CFLAGS = $(AM_CFLAGS) $(XCB_CFLAGS) $(VDPAU_CFLAGS)
-libvdpau_display_plugin_la_LIBADD = libvlc_vdpau.la libvlc_xcb_events.la \
-	$(AM_LIBADD) $(X_LIBS) $(X_PRE_LIBS) -lX11 $(XCB_LIBS)
-
 if HAVE_VDPAU
 pkglib_LTLIBRARIES += libvlc_vdpau.la
 vdpau_LTLIBRARIES = libvdpau_instance_plugin.la \
 	libvdpau_deinterlace_plugin.la libvdpau_adjust_plugin.la \
 	libvdpau_sharpen_plugin.la libvdpau_chroma_plugin.la
-if HAVE_XCB
-vdpau_LTLIBRARIES += libvdpau_display_plugin.la
-endif
 if HAVE_AVCODEC_VDPAU
 vdpau_LTLIBRARIES += libvdpau_avcodec_plugin.la
 endif
